@@ -373,7 +373,6 @@ is $res->headers->content_length, undef, 'right "Content-Length" value';
   ok $res->is_finished, 'response is finished';
   ok $res->content->is_finished, 'content is finished';
   is $res->error->{message}, 'Maximum buffer size exceeded', 'right error';
-  is $res->error->{advice}, 400, 'right advice';
   ok $res->is_limit_exceeded, 'limit is not exceeded';
   is $res->code,              200, 'right status';
   is $res->message,           'OK', 'right message';
@@ -396,7 +395,6 @@ is $res->headers->content_length, undef, 'right "Content-Length" value';
   ok $res->is_finished, 'response is finished';
   ok $res->content->is_finished, 'content is finished';
   is $res->error->{message}, 'Maximum buffer size exceeded', 'right error';
-  is $res->error->{advice}, 400, 'right advice';
   is $res->code,    200,   'right status';
   is $res->message, 'OK',  'right message';
   is $res->version, '1.1', 'right version';
@@ -420,7 +418,6 @@ is $res->headers->content_length, undef, 'right "Content-Length" value';
   ok $res->is_finished, 'response is finished';
   ok $res->content->is_finished, 'content is finished';
   is $res->error->{message}, 'Maximum buffer size exceeded', 'right error';
-  is $res->error->{advice}, 400, 'right advice';
   is $res->code,    200,   'right status';
   is $res->message, 'OK',  'right message';
   is $res->version, '1.1', 'right version';
