@@ -1,5 +1,7 @@
 
 5.74  2015-01-25
+  - Improved parser errors to be more consistent with connection errors in
+    Mojo::Message::Request and Mojo::Message::Response.
 
 5.73  2015-01-24
   - Deprecated Mojolicious::Routes::Route::bridge in favor of
